Bug 358573 - Unable to enter fraction part when decimal point of current locale differs from "."
Summary: Unable to enter fraction part when decimal point of current locale differs fr...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-26 09:22 UTC by Alexey Chernov
Modified: 2017-11-11 23:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Chernov 2016-01-26 09:22:11 UTC
It's impossible to enter decimal separator to the fields of cash amount, so even entering the sum in calculator prints nothing to the field.
As it turned out, the problem was in kMyMoneyMoneyValidator, the patch will follow.

Reproducible: Always

Steps to Reproduce:
0. Select some affected locale, e.g. German or Russian (they have "," as a decimal point).
1. Go to "Ledgers" view, select any account.
2. Create another operation or edit some existing one.
3. Try to enter some sum in the "Amount" field, either manually or with calculator opened.

Actual Results:  
Notice that you can't enter decimal point sign, when you close the calculator, nothing is entered in the field.

Expected Results:  
The sum should have been entered successfully.
Comment 1 Alexey Chernov 2016-01-26 09:26:42 UTC
Here's a review request for it: https://git.reviewboard.kde.org/r/126888
Comment 2 Alexey Chernov 2016-02-24 20:26:10 UTC
Git commit 615c72aff01fdb66601faedcc64f7cb5ed0035c0 by Alexey Chernov.
Committed on 24/02/2016 at 20:24.
Pushed by chernov into branch 'frameworks'.

Explicitly set C locale to fix locale-specific validation

Set C locale explicitly to prevent applying locale-specific
validation twice (one time is manual pre-parsing, another time
is internal).

REVIEW: 126888

M  +2    -0    kmymoney/widgets/kmymoneyedit.cpp

http://commits.kde.org/kmymoney/615c72aff01fdb66601faedcc64f7cb5ed0035c0