Explicitly set C locale to fix locale-specific validation

Set C locale explicitly to prevent applying locale-specific
validation twice (one time is manual pre-parsing, another time
is internal).

REVIEW: 126888
BUG: 358573